W-11558453, W-11558514: new models related with Oas Component feature

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -722,6 +722,18 @@ nodeMappings:
         allowMultiple: true
 
 
+  ComponentModule:
+    classTerm: apiContract.ComponentModule
+    extends: Document
+    mapping:
+      name:
+        propertyTerm: core.name
+        range: string
+      version:
+        propertyTerm: core.version
+        range: string
+
+
   CorrelationId:
     classTerm: core.CorrelationId
     mapping:
