W-11748903: Add description field to CustomDomainProperties

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -792,6 +792,9 @@ nodeMappings:
       name:
         propertyTerm: core.name
         range: string
+      description:
+        propertyTerm: core.description
+        range: string
       serializationOrder:
         propertyTerm: raml-shapes.serializationOrder
         range: integer
