W-11756604: added things related with JSON-LD Schema feature

--- a/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
+++ b/vocabulary/src/main/resources/dialects/canonical_webapi_spec.yaml
@@ -1237,6 +1237,20 @@ nodeMappings:
         allowMultiple: true
 
 
+  JsonLDElement:
+    classTerm: doc.JsonLDElement
+
+
+  JsonLDInstanceDocument:
+    classTerm: doc.JsonLDInstanceDocument
+    extends: Document
+    mapping:
+      encodes:
+        propertyTerm: doc.encodes
+        range: JsonLDElement
+        allowMultiple: true
+
+
   JsonSchemaDocument:
     classTerm: doc.JsonSchemaDocument
     extends: Document
@@ -2774,6 +2788,10 @@ nodeMappings:
       nulled:
         propertyTerm: meta.nulled
         range: boolean
+      containers:
+        propertyTerm: meta.containers
+        range: string
+        allowMultiple: true
 
 
   curiePrefixModel:
