chore: update gradle and dependencies to support jdk17

--- a/build.gradle
+++ b/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.mulesoft:gradle-tools:0.2.6"
-        classpath files('lib/nexus-iq-cli-1.68.0-01.jar')
+        classpath "com.mulesoft:gradle-tools:0.3.24"
+        classpath files('lib/nexus-iq-cli-1.159.0-01.jar')
     }
 }
 
@@ -45,7 +45,7 @@ file("versions.yaml").withInputStream {
 }
 
 dependencies {
-    compile "com.github.amlorg:amf-transform_2.12:${versions.'amf.transform'}"
+    implementation "com.github.amlorg:amf-transform_2.12:${versions.'amf.transform'}"
 }
 
 tasks.nexusIq.dependsOn(distZip)
