W-14413932 - Publish internal version for testing

--- a/versions.yaml
+++ b/versions.yaml
@@ -1,2 +1,2 @@
-amf.vocabulary: 42.0.0-SNAPSHOT
-amf.transform: 2.26.0-SNAPSHOT
+amf.vocabulary: 41.0.0-W-14413932-INTERNAL
+amf.transform: 2.25.0-W-14413932-INTERNAL
