--- a/versions.yaml
+++ b/versions.yaml
@@ -1,2 +1,2 @@
-amf.vocabulary: 43.0.0-SNAPSHOT
-amf.transform: 2.27.0-SNAPSHOT
+amf.vocabulary: 43.0.0-JAVA21-INTERNAL
+amf.transform: 2.27.0-JAVA21-INTERNAL
