--- a/vocabulary/src/main/resources/vocabularies/api_binding.yaml
+++ b/vocabulary/src/main/resources/vocabularies/api_binding.yaml
@@ -3,6 +3,7 @@ vocabulary: apiBinding
 base: http://a.ml/vocabularies/apiBinding#
 usage: API binding vocabulary
 uses:
+  data: data_model.yaml
   shacl: external/shacl.yaml
 classTerms:
   Amqp091ChannelBinding:
@@ -35,6 +36,18 @@ classTerms:
       - ChannelBinding
       - OperationBinding
       - MessageBinding
+  GooglePubSubChannelBinding:
+    displayName: GooglePubSubChannelBinding
+    extends: ChannelBinding
+  GooglePubSubMessageBinding:
+    displayName: GooglePubSubMessageBinding
+    extends: MessageBinding
+  GooglePubSubMessageStoragePolicy:
+    displayName: GooglePubSubMessageStoragePolicy
+  GooglePubSubSchemaDefinition:
+    displayName: GooglePubSubSchemaDefinition
+  GooglePubSubSchemaSettings:
+    displayName: GooglePubSubSchemaSettings
   HttpMessageBinding:
     displayName: HttpMessageBinding
     extends: MessageBinding
@@ -81,18 +94,50 @@ classTerms:
     displayName: OperationBinding
   OperationBindings:
     displayName: OperationBindings
+  PulsarChannelBinding:
+    displayName: PulsarChannelBinding
+    extends: ChannelBinding
+  PulsarChannelRetention:
+    displayName: PulsarChannelRetention
+  PulsarServerBinding:
+    displayName: PulsarServerBinding
+    extends: ServerBinding
   ServerBinding:
     displayName: ServerBinding
   ServerBindings:
     displayName: ServerBindings
+  SolaceOperationBinding:
+    displayName: SolaceOperationBinding
+    extends: OperationBinding
+  SolaceOperationDestination:
+    displayName: SolaceOperationDestination
+  SolaceOperationQueue:
+    displayName: SolaceOperationQueue
+  SolaceOperationTopic:
+    displayName: SolaceOperationTopic
+  SolaceServerBinding:
+    displayName: SolaceServerBinding
+    extends: ServerBinding
   WebSocketsChannelBinding:
     displayName: WebSocketsChannelBinding
     extends: ChannelBinding
 propertyTerms:
+  accessType:
+    displayName: accessType
+    description: "'exclusive' or 'nonexclusive'. Only applicable when destinationType is 'queue'."
+    range: string
   ack:
     displayName: ack
     description: Whether the consumer should ack the message or not
     range: boolean
+  allowedPersistenceRegions:
+    displayName: allowedPersistenceRegions
+    description: A list of IDs of GCP regions where messages that are published to the topic may be persisted in storage
+    range: string
+  attribute:
+    displayName: attributes
+    description: Attributes for this message
+    range: data.Object
   autoDelete:
     displayName: autoDelete
     description: Whether the exchange should be deleted when the last queue is unbound from it
@@ -133,10 +178,18 @@ propertyTerms:
     displayName: clientId
     description: Schema that defines the id of the consumer inside a consumer group
     range: shacl.Shape
+  compaction:
+    displayName: compaction
+    description: Topic compaction threshold given in Megabytes.
+    range: integer
   contentEncoding:
     displayName: contentEncoding
     description: MIME encoding for the message content
     range: string
+  deduplication:
+    displayName: deduplication
+    description: Message deduplication. When true, it ensures that each message produced on Pulsar topics is persisted to disk only once.
+    range: boolean
   deliveryMode:
     displayName: deliveryMode
     description: Delivery mode of the message
@@ -149,6 +202,9 @@ propertyTerms:
     displayName: destinationType
     description: The type of destination (either exchange or queue or fifo-queue).
     range: string
+  destinations:
+    displayName: destinations
+    range: SolaceOperationDestination
   durable:
     displayName: durable
     description: Whether the exchange should survive broker restarts or not
@@ -157,6 +213,10 @@ propertyTerms:
     displayName: durablePermitted
     description: Defines if the subscription may be durable.
     range: boolean
+  encoding:
+    displayName: encoding
+    description: "The encoding of the message "
+    range: string
   exchange:
     displayName: exchange
     description: Defines the exchange properties
@@ -173,6 +233,14 @@ propertyTerms:
     displayName: expiry
     description: This is a period of time expressed in milliseconds and set by the application that puts the message.
     range: integer
+  firstRevisionId:
+    displayName: firstRevisionId
+    description: The minimum (inclusive) revision allowed for validating messages
+    range: string
+  geo-replication:
+    displayName: geo-replication
+    description: A list of clusters the topic is replicated to.
+    range: string
   groupId:
     displayName: groupId
     description: Schema that defines the id of the consumer group
@@ -197,10 +265,18 @@ propertyTerms:
     displayName: keepAlive
     description: Interval in seconds of the longest period of time the broker and the client can endure without sending a message
     range: integer
+  labels:
+    displayName: labels
+    description: "An object of key-value pairs "
+    range: data.Object
   lastMsgRetained:
     displayName: lastMsgRetained
     description: Defines if the last message published will be made available to new subscriptions.
     range: boolean
+  lastRevisionId:
+    displayName: lastRevisionId
+    description: The maximum (inclusive) revision allowed for validating messages
+    range: string
   lastWill:
     displayName: lastWill
     description: Last Will and Testament configuration
@@ -213,6 +289,14 @@ propertyTerms:
     displayName: maxMsgLength
     description: The maximum length of the physical message (in bytes) accepted by the Topic or Queue. Messages produced that are greater in size than this value may fail to be delivered.
     range: integer
+  maxMsgSpoolSize:
+    displayName: maxMsgSpoolSize
+    description: The maximum amount of message spool that the given queue may use. Only applicable when destinationType is 'queue'.
+    range: string
+  maxTtl:
+    displayName: maxTtl
+    description: The maximum TTL to apply to messages to be spooled. Only applicable when destinationType is 'queue'.
+    range: string
   message:
     displayName: message
     description: Message used to notify other clients about an ungracefully disconnected client.
@@ -221,6 +305,14 @@ propertyTerms:
     displayName: key
     description: Schema that defines the message key
     range: shacl.Shape
+  messageRetentionDuration:
+    displayName: messageRetentionDuration
+    description: Indicates the minimum duration to retain a message after it is published to the topic
+    range: string
+  messageStoragePolicy:
+    displayName: messageStoragePolicy
+    description: Policy constraining the set of Google Cloud Platform regions where messages published to the topic may be stored
+    range: GooglePubSubMessageStoragePolicy
   messageType:
     displayName: messageType
     description: Application-specific message type
@@ -229,10 +321,22 @@ propertyTerms:
     displayName: method
     description: The HTTP method to use when establishing the connection
     range: string
+  msgVpn:
+    displayName: msgVpn
+    description: The Virtual Private Network name on the Solace broker.
+    range: string
   multiEndpointServer:
     displayName: multiEndpointServer
     description: If multiEndpointServer is true then multiple connections can be workload balanced and applications should not make assumptions as to where messages are processed. Where message ordering, or affinity to specific message resources is necessary, a single endpoint (multiEndpointServer = false) may be required.
     range: boolean
+  name:
+    displayName: name
+    description: Name of the schema that messages published should be validated against
+    range: string
+  namespace:
+    displayName: namespace
+    description: The namespace the channel is associated with.
+    range: string
   objectName:
     displayName: objectName
     description: The name of the IBM MQ topic object.
@@ -240,6 +344,14 @@ propertyTerms:
   operationType:
     displayName: type
     description: Type of operation
+    range: string
+  orderingKey:
+    displayName: orderingKey
+    description: If non-empty, identifies related messages for which publish order should be respected
+    range: string
+  persistence:
+    displayName: persistence
+    description: Persistence of the topic in Pulsar. It MUST be either persistent or non-persistent.
     range: string
   priority:
     displayName: priority
@@ -265,10 +377,34 @@ propertyTerms:
     displayName: retain
     description: Whether the broker should retain the Last Will and Testament message or not
     range: boolean
+  retention:
+    displayName: retention
+    description: Topic retention policy.
+    range: PulsarChannelRetention
+  schemaDefinition:
+    displayName: schema
+    description: Define Schema
+    range: GooglePubSubSchemaDefinition
+  schemaSettings:
+    displayName: schemaSettings
+    description: Settings for validating messages published against a schema
+    range: GooglePubSubSchemaSettings
+  size:
+    displayName: size
+    description: Size given in MegaBytes. Defaults to 0
+    range: integer
   string:
     displayName: string
     description: The value of the IBM MQ topic string to be used.
     range: string
+  tenant:
+    displayName: tenant
+    description: The pulsar tenant. If omitted, "public" MUST be assumed.
+    range: string
+  time:
+    displayName: time
+    description: Time given in Minutes. Defaults to 0
+    range: integer
   timestamp:
     displayName: timestamp
     description: Whether the message should include a timestamp or not
@@ -277,6 +413,14 @@ propertyTerms:
     displayName: topic
     description: The topic where the Last Will and Testament message will be sent
     range: string
+  topicSubscriptions:
+    displayName: topicSubscriptions
+    description: A list of topics that the client subscribes to, only applicable when destinationType is 'topic'. If none is given, the client subscribes to the topic as represented by the channel name.
+    range: string
+  ttl:
+    displayName: ttl
+    description: Message time-to-live in seconds.
+    range: integer
   type:
     displayName: type
     description: Binding for a corresponding known type
